examples/neg/named_args_wrong.effekt
def length(x: Double, y: Double): Double = sqrt(x * x + y * y)

def main() = {
  println(length(y = 3.0, x = 4.0)) // ERROR named argument
}